# AI-actor-game

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SUBMISSION_CHECKLIST.md  env.example  main.py  pyproject.toml
.agents/skills/api-gatekeeper/: SKILL.md
.agents/skills/code-review-config/: SKILL.md
.agents/skills/costs-pricing/: SKILL.md
.agents/skills/extensibility/: SKILL.md
.agents/skills/final-checklist/: SKILL.md
.agents/skills/modular-design/: SKILL.md
.agents/skills/package-organization/: SKILL.md
.agents/skills/parallel-processing/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: work_item.md
.github/workflows/: ci.yml
config/: actor_config.json  milestones.json
docs/: AI_USAGE_AND_COST.md  CODE_REVIEW_REMEDIATION.md  EX06_ASSIGNMENT.md  INTERFACES.md  LLM_BACKENDS.md  PHASE_LENGTH.md  PLAN.md  PRD.md  PROMPTS.md  QTABLE_RETRAINING_REPORT.md  TODO.md  TODO_CATEGORIZED.md  TODO_ORIGINAL.md
models/: cop_qtable.npy  qtable_manifest.json  thief_qtable.npy
scripts/: README.md  bootstrap_github_repo.py  check_docs_present.py  check_github_metadata.py  check_line_cap.py  check_markdown_links.py  check_no_secrets.py  check_phase_order.py  check_planning_ids.py  check_source_archives.py  check_workflow_permissions.py  launch_common.py  mcp_client_loader.py  openrouter_adapter.py  peer_sync.py  readme_sync.py  run_peer_match.py  run_stack.py  selfplay.py  sync_milestones.py  train_qtable.py  validate_repo.py
src/actor_brains/: __init__.py  belief_state.py  config.py  heuristic_actor.py  heuristic_scoring.py  qtable_actor.py  state_encoder.py
src/actor_t6/: __init__.py  belief_state.py  config.py  heuristic_actor.py  heuristic_scoring.py  qtable_actor.py  state_encoder.py
tests/: conftest.py  test_belief_state.py  test_config.py  test_heuristic.py  test_heuristic_capture.py  test_integration_heuristic.py  test_launch_common.py  test_launch_lifecycle.py  test_openrouter_adapter.py  test_peer_sync.py  test_qtable.py  test_qtable_bootstrap.py  test_run_peer_match.py  test_run_stack.py  test_selfplay_feedback.py  test_state_encoder.py  test_train_qtable.py
(+11 files in other folders)
