[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actor-for-ex06"
version = "1.0.1"
description = "Cop & Thief actor decision backends (actor_t6) for HW6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/actor_t6"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
pythonpath = ["src", "agent-orchestration-course-t6-common/src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/actor_t6"]

[tool.coverage.report]
fail_under = 85

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.19",
]
